# GPSImagesToMap

./: .envsaved  AGENTS.md  README.md  exporter.py  image_discovery.py  main.py  pyproject.toml  releasenotes.md
docs/: index.html
docs/Wallis/: index.html
src/gpsimagestomap/: __main__.py  app_config.py  exporter.py  geotagger.py  image_discovery.py  launcher.py  main.py  server.py  storage.py  track_parser.py
src/gpsimagestomap/templates/: export.html  map.html
templates/: export.html
tests/: test_geotagger.py  test_integration_geotag.py  test_main.py  test_server_show_mode.py  test_track_parser.py
